--- a/src/app/bienvenue/bienvenue/bienvenue.component.html
+++ b/src/app/bienvenue/bienvenue/bienvenue.component.html
@@ -12,7 +12,7 @@
     <ActionItem icon="res://menu" android:visibility="collapsed" (tap)="onDrawerButtonTap()"
         ios.position="left" >
     </ActionItem>
-    <Label class="pageLabel" text="pierre"></Label>
+    <Label class="pageLabel" text="pierre Thomain"></Label>
 </ActionBar>
 <StackLayout>
 <GridLayout class="page__content">
