--- a/src/_app-common.scss
+++ b/src/_app-common.scss
@@ -30,7 +30,7 @@
       font-size: 18px;
 }
 .picture{
-    background-image: url("~/images/jambebis.png");
+    // background-image: url("~/images/jambebis.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: 200 200;
@@ -38,7 +38,7 @@
     margin-bottom: 20;
 }
 .pictureA{
-    background-image: url("~/images/chute.jpg");
+    // background-image: url("~/images/chute.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: 200 200;
@@ -46,7 +46,7 @@
     margin-bottom: 20;
 }
 .pictureB{
-    background-image: url("~/images/collision.png");
+    // background-image: url("~/images/collision.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: 200 200;
@@ -54,7 +54,7 @@
     margin-bottom: 20;
 }
 .pictureC{
-    background-image: url("~/images/autre.jpg");
+    // background-image: url("~/images/autre.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: 200 200;
@@ -78,7 +78,7 @@
     margin-bottom: 20;
 }
 .pictureF{
-    background-image: url("~/images/epaule.jpg");
+    // background-image: url("~/images/epaule.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: 200 200;
@@ -94,7 +94,7 @@
     margin-bottom: 20;
 }
 .pictureA1{
-    background-image: url("~/images/skieur.jpg");
+    // background-image: url("~/images/skieur.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: 200 200;
@@ -118,7 +118,7 @@
     margin-bottom: 20;
 }
 .pictureD1{
-    background-image: url("~/images/raquette.png");
+    // background-image: url("~/images/raquette.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: 200 200;
