sauvegarder appli complète 11h30

--- a/src/_app-common.scss
+++ b/src/_app-common.scss
@@ -62,7 +62,7 @@
     margin-bottom: 20;
 }
 .pictureD{
-    background-image: url("~/images/tete.png");
+    // background-image: url("~/images/tete.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: 200 200;
@@ -70,7 +70,7 @@
     margin-bottom: 20;
 }
 .pictureE{
-    background-image: url("~/images/bras.png");
+    // background-image: url("~/images/bras.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: 200 200;
@@ -86,7 +86,7 @@
     margin-bottom: 20;
 }
 .pictureG{
-    background-image: url("~/images/genou.jpeg");
+    // background-image: url("~/images/genou.jpeg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: 200 200;
@@ -110,7 +110,7 @@
     margin-bottom: 20;
 }
 .pictureC1{
-    background-image: url("~/images/luge.jpg");
+    // background-image: url("~/images/luge.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: 200 200;
