sauvegarde aprés ajout des données tests de mathieu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@ https://docs.nativescript.org/angular/ui/professional-ui-components/ng-SideDrawe
 
                 <StackLayout class="hr"></StackLayout>
 
-                <GridLayout columns="auto, *" class="nt-drawer__list-item" (tap)="onNavItemTap('/browse')">
+                <GridLayout columns="auto, *" class="nt-drawer__list-item" (tap)="onNavItemTap('/informations')">
                     <Label col="0" text="&#xf05a;" class="nt-icon fas"></Label>
                     <Label col="1" text="Informations" class="p-r-10"></Label>
                 </GridLayout>
@@ -28,93 +28,23 @@ https://docs.nativescript.org/angular/ui/professional-ui-components/ng-SideDrawe
 
                 <StackLayout class="hr"></StackLayout>
 
-                <GridLayout columns="auto, *" class="nt-drawer__list-item" (tap)="onNavItemTap('/search')">
+                <GridLayout columns="auto, *" class="nt-drawer__list-item" (tap)="onNavItemTap('/danger')">
                     <Label col="0" text="&#xf041;" class="nt-icon fas"></Label>
                     <Label col="1" text="Signaler un danger" class="p-r-10"></Label>
                 </GridLayout>
 
                 <StackLayout class="hr"></StackLayout>
 
-                <GridLayout columns="auto, *" class="nt-drawer__list-item" (tap)="onNavItemTap('/featured')">
+                <GridLayout columns="auto, *" class="nt-drawer__list-item" (tap)="onNavItemTap('/sos')">
                     <Label col="0" text="&#xf3c5;" class="nt-icon fas"></Label>
                     <Label col="1" text="Appeller les secours" class="p-r-10"></Label>
                 </GridLayout>
 
                 <StackLayout class="hr"></StackLayout>
 
-                <GridLayout columns="auto, *" class="nt-drawer__list-item" (tap)="onNavItemTap('/signalement')">
+                <GridLayout columns="auto, *" class="nt-drawer__list-item" (tap)="onNavItemTap('/carnet')">
                     <Label col="0" text="&#xf573;" class="nt-icon fas"></Label>
                     <Label col="1" text="Mes signalements" class="p-r-10"></Label>
-                </GridLayout>
-
-                <StackLayout class="hr"></StackLayout>
-
-                <GridLayout columns="auto, *" class="nt-drawer__list-item" (tap)="onNavItemTap('/settings')">
-                    <Label col="0" text="&#xf477;" class="nt-icon fas"></Label>
-                    <Label col="1" text="Carnet de santé" class="p-r-10"></Label>
-                </GridLayout>
-
-                <StackLayout class="hr"></StackLayout>
-
-                <GridLayout columns="auto, *" class="nt-drawer__list-item" (tap)="onNavItemTap('/bienvenue')">
-                    <Label col="0" text="&#xf477;" class="nt-icon fas"></Label>
-                    <Label col="1" text="Bienvenue" class="p-r-10"></Label>
-                </GridLayout>
-
-                <StackLayout class="hr"></StackLayout>
-
-                <GridLayout columns="auto, *" class="nt-drawer__list-item" (tap)="onNavItemTap('/form-carnet')">
-                    <Label col="0" text="&#xf477;" class="nt-icon fas"></Label>
-                    <Label col="1" text="Form-carnet" class="p-r-10"></Label>
-                </GridLayout>
-
-                <StackLayout class="hr"></StackLayout>
-
-                <GridLayout columns="auto, *" class="nt-drawer__list-item" (tap)="onNavItemTap('/formulaire')">
-                    <Label col="0" text="&#xf477;" class="nt-icon fas"></Label>
-                    <Label col="1" text="Formulaire" class="p-r-10"></Label>
-                </GridLayout>
-
-                <StackLayout class="hr"></StackLayout>
-
-                <GridLayout columns="auto, *" class="nt-drawer__list-item" (tap)="onNavItemTap('/media')">
-                    <Label col="0" text="&#xf477;" class="nt-icon fas"></Label>
-                    <Label col="1" text="Media" class="p-r-10"></Label>
-                </GridLayout>
-
-                <StackLayout class="hr"></StackLayout>
-
-                <GridLayout columns="auto, *" class="nt-drawer__list-item" (tap)="onNavItemTap('/media2')">
-                    <Label col="0" text="&#xf477;" class="nt-icon fas"></Label>
-                    <Label col="1" text="Media2" class="p-r-10"></Label>
-                </GridLayout>
-
-                <StackLayout class="hr"></StackLayout>
-
-                <GridLayout columns="auto, *" class="nt-drawer__list-item" (tap)="onNavItemTap('/signaler')">
-                    <Label col="0" text="&#xf477;" class="nt-icon fas"></Label>
-                    <Label col="1" text="Signaler" class="p-r-10"></Label>
-                </GridLayout>
-
-                <StackLayout class="hr"></StackLayout>
-
-                <GridLayout columns="auto, *" class="nt-drawer__list-item" (tap)="onNavItemTap('/confirmation')">
-                    <Label col="0" text="&#xf477;" class="nt-icon fas"></Label>
-                    <Label col="1" text="Confirmation" class="p-r-10"></Label>
-                </GridLayout>
-
-                <StackLayout class="hr"></StackLayout>
-
-                <GridLayout columns="auto, *" class="nt-drawer__list-item" (tap)="onNavItemTap('/fiche')">
-                    <Label col="0" text="&#xf477;" class="nt-icon fas"></Label>
-                    <Label col="1" text="Fiche" class="p-r-10"></Label>
-                </GridLayout>
-
-                <StackLayout class="hr"></StackLayout>
-
-                <GridLayout columns="auto, *" class="nt-drawer__list-item" (tap)="onNavItemTap('/informations')">
-                    <Label col="0" text="&#xf477;" class="nt-icon fas"></Label>
-                    <Label col="1" text="Informations" class="p-r-10"></Label>
                 </GridLayout>
 
                 <StackLayout class="hr"></StackLayout>
