--- a/src/app/sos/gestesecours/gestesecours.component.html
+++ b/src/app/sos/gestesecours/gestesecours.component.html
@@ -20,7 +20,7 @@
         <StackLayout class="hr"></StackLayout>
         <GridLayout rows="100, 250, 50, 10" *ngFor="let item of news">
             <Label row="0" [text]="item.titre" fontWeight="bold" marginLeft="10%" fontSize="15px" textAlign="center" class="titre"></Label>
-            <Image row="1" [src]="item.img"height="150%"></Image>
+            <Image row="1" [src]=""height="150%"></Image> 
           <StackLayout class="hr"row="3"></StackLayout>
         </GridLayout>
 
