--- a/src/app/sos/gravite/gravite.component.html
+++ b/src/app/sos/gravite/gravite.component.html
@@ -48,7 +48,7 @@
 
  
 </ScrollView> <GridLayout>
-  <Button text="Envoyer" backgroundColor="#0DF24D" color="white" [nsRouterLink]="['/browse']"(tap)="submit()" fontSize="Large"
+  <Button text="Envoyer" backgroundColor="#0DF24D" color="white" (tap)="submit()" fontSize="Large"
 class="soumission" marginTop="100%"></Button>
 </GridLayout>
  <!-- <ScrollView orientation="vertical" class="coverImage">
