--- a/src/app/utilisateur/accueilutilisateur/accueilutilisateur.component.html
+++ b/src/app/utilisateur/accueilutilisateur/accueilutilisateur.component.html
@@ -9,20 +9,20 @@
     NavigationButton as a side-drawer button in iOS is not possible,
     because its function is to always navigate back in the application.
     -->
-    <ActionItem icon="res://menu" android:visibility="collapsed" (tap)="onDrawerButtonTap()" -->
+    <ActionItem icon="res://menu" android:visibility="collapsed" (tap)="onDrawerButtonTap()" 
         ios.position="left" >
     </ActionItem>
     <Label class="pageLabel" text="ACCUEIL"></Label>
 </ActionBar>
 <GridLayout class="page__content">
     <GridLayout rows="400">
-        <image row="0" src="https://pngimage.net/wp-content/uploads/2018/06/mountain-silhouette-png-3.png"></image>
+        <Image row="0" src="https://pngimage.net/wp-content/uploads/2018/06/mountain-silhouette-png-3.png"></Image>
     </GridLayout>
     <GridLayout rows="700">
-        <Image row="0" src="https://colorate.azurewebsites.net/SwatchColor/000000"></image>
+        <Image row="0" src="https://colorate.azurewebsites.net/SwatchColor/000000"></Image>
     </GridLayout>
     <GridLayout rows="1000">
-        <image row="0" src="https://colorate.azurewebsites.net/SwatchColor/000000"></image>
+        <Image row="0" src="https://colorate.azurewebsites.net/SwatchColor/000000"></Image>
     </GridLayout>
 </GridLayout>
 <StackLayout class="hr" height="1480px"></StackLayout>
