--- a/src/app/utilisateur/creationcompte/creationcompte.component.html
+++ b/src/app/utilisateur/creationcompte/creationcompte.component.html
@@ -10,7 +10,7 @@
     because its function is to always navigate back in the application.
     -->
     <ActionItem icon="res://menu" android:visibility="collapsed" (tap)="onDrawerButtonTap()"
-        ios.position="left" >
+        ios.position="left">
     </ActionItem>
     <Label class="pageLabel" text=""></Label>
 </ActionBar>
@@ -32,7 +32,7 @@
 </StackLayout>
 <StackLayout class="hr" height="1505px"></StackLayout>
 <StackLayout>
-    <BottomNavigation height="1900px">
+    <BottomNavigation height="100%">
         <TabStrip>
             <TabStripItem>
                 <Label col="0" text="&#xf05a;" class="nt-icon fas"></Label>
