--- a/src/app/utilisateur/inscription/inscription.component.html
+++ b/src/app/utilisateur/inscription/inscription.component.html
@@ -16,7 +16,7 @@
 
 <GridLayout class="page__content"rows="50,50,50" columns=*,*,*>
     <!-- <Label class="page__content-icon fas" text="&#xf002;"></Label> -->
-    <Label class="page__content-placeholder"[nsRouterLink]="['/congeneutilisation']" text="Conditions générales d'utilisations" row="0" colspan="3"color="black"fontWeight="Bold"></Label>
+    <Label class="page__content-placeholder" text="Conditions générales d'utilisations" row="0" colspan="3"color="black"fontWeight="Bold"></Label>
      
 
     <!-- <Label text="{{ checkYes ? '&#xf192;' : '&#xf10c;'}}" 
