--- a/src/app/sos/appel/appel.component.html
+++ b/src/app/sos/appel/appel.component.html
@@ -27,10 +27,10 @@
         fontWeight="Bold" row="5"></Label>
     <Label class="page__content-placeholder" text="" color="black" marginTop="0"
         fontSize="18px" fontWeight="Bold" row="6"></Label>
-    <Label class="page__content-placeholder"  width="90%" textAlign="center" paddingTop="10%" paddingLeft="47%"height="10%"text=" Gestes de Premiers secours"[nsRouterLink]="['/gestes']" backgroundColor="#FDE407" color="black" marginTop="0"
+    <Label class="page__content-placeholder"  width="90%" textAlign="center" paddingTop="10%" paddingLeft="47%"height="10%"text=" Gestes de Premiers secours" backgroundColor="#FDE407" color="black" marginTop="0"
         fontSize="18px" fontWeight="Bold" row="7"></Label>
     <GridLayout>
-        <button text="Complements d'Informations"  [nsRouterLink]="['/naturevictime']" pageTransition="slide"
+        <button text="Complements d'Informations"  pageTransition="slide"
             color="white" backgroundColor="#FF0000" marginTop="20%" marginBottom="0"></button>
 
     </GridLayout>
