--- a/src/app/carnet/carnetrempli/carnetrempli.component.html
+++ b/src/app/carnet/carnetrempli/carnetrempli.component.html
@@ -66,7 +66,7 @@
  </ScrollView>            
             
             <BottomNavigation class="bottomNav" height="100%">
-                <StackLayout class="hr" height="160px"></StackLayout>
+                <StackLayout class="hr" height="50%"></StackLayout>
                 <TabStrip>
                     <TabStripItem>
                         <Label col="0" text="&#xf05a;" class="nt-icon fas"></Label>
