--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,10 +13,10 @@ https://docs.nativescript.org/angular/ui/professional-ui-components/ng-SideDrawe
     
         <ScrollView row="1" class="nt-drawer__body">
             <StackLayout>
-                <GridLayout columns="auto, *" class="nt-drawer__list-item"  (tap)="onNavItemTap('/home')">
+                <!-- <GridLayout columns="auto, *" class="nt-drawer__list-item"  (tap)="onNavItemTap('/home')">
                     <Label col="0" text="&#xf015;" class="nt-icon fas"></Label>
                     <Label col="1" text="Accueil" class="p-r-10"></Label>
-                </GridLayout>
+                </GridLayout> -->
 
                 <StackLayout class="hr"></StackLayout>
 
