--- a/src/app/utilisateur/accueilutilisateur/accueilutilisateur.component.html
+++ b/src/app/utilisateur/accueilutilisateur/accueilutilisateur.component.html
@@ -1,33 +1,41 @@
 <ActionBar>
-
-    <!-- Use the NavigationButton as a side-drawer button in Android -->
-    <!-- because ActionItems are shown on the right side of the ActionBar -->
-
+    <!-- 
+    Use the NavigationButton as a side-drawer button in Android
+    because ActionItems are shown on the right side of the ActionBar
+    -->
     <NavigationButton ios:visibility="collapsed" icon="res://menu" (tap)="onDrawerButtonTap()"></NavigationButton>
     <!-- 
     Use the ActionItem for IOS with position set to left. Using the
     NavigationButton as a side-drawer button in iOS is not possible,
     because its function is to always navigate back in the application.
     -->
-    <ActionItem icon="res://menu" android:visibility="collapsed" (tap)="onDrawerButtonTap()" 
+    <ActionItem icon="res://menu" android:visibility="collapsed" (tap)="onDrawerButtonTap()"
         ios.position="left" >
     </ActionItem>
     <Label class="pageLabel" text="ACCUEIL"></Label>
 </ActionBar>
+<StackLayout>
 <GridLayout class="page__content">
-    <GridLayout rows="400">
-        <Image row="0" src="https://pngimage.net/wp-content/uploads/2018/06/mountain-silhouette-png-3.png"></Image>
+
+    <!-- <GridLayout rows="350">
+        <image row="0" src="~/images/thumbnail.png"></image>
+    </GridLayout> -->
+    <GridLayout rows="350">
+        <image row="0" src="https://pngimage.net/wp-content/uploads/2018/06/mountain-silhouette-png-3.png"></image>
     </GridLayout>
-    <GridLayout rows="700">
-        <Image row="0" src="https://colorate.azurewebsites.net/SwatchColor/000000"></Image>
+    <GridLayout rows="850">
+        <ContentView row="0" id="cache_noir" width="100%" height="62%" backgroundColor="#000000"></ContentView>
+        <ContentView row="1" id="message_accueil" width="70%" height="37%" backgroundColor="#433B3B" ></ContentView>
+        <Label row="2" class="entete2" text="Bienvenue à"></Label>
     </GridLayout>
-    <GridLayout rows="1000">
-        <Image row="0" src="https://colorate.azurewebsites.net/SwatchColor/000000"></Image>
+    <GridLayout>
+    <image src="https://www.flocon-vert.org/wp-content/uploads/2017/09/Capture-d%E2%80%99%C3%A9cran-2017-09-27-%C3%A0-10.00.41-291x300.png" width="40%" height="40%" class="logo_station"></image>
     </GridLayout>
 </GridLayout>
-<StackLayout class="hr" height="1480px"></StackLayout>
+</StackLayout>
+<StackLayout class="hr" height="73%"></StackLayout>
 <StackLayout>
-    <BottomNavigation height="1900px">
+    <BottomNavigation height="100%">
         <TabStrip>
             <TabStripItem>
                 <Label col="0" text="&#xf05a;" class="nt-icon fas"></Label>
