modification nom dans page carnetrempli

--- a/src/_app-common.scss
+++ b/src/_app-common.scss
@@ -592,6 +592,7 @@ Button {
     background-color: grey;
     color:white;
     border-radius: 25;
+    margin-bottom: 20%;
 }
 .btn_creer_un_compte{
     background-color: white;
