--- a/src/app/carnet/carnetrempli/carnetrempli.component.html
+++ b/src/app/carnet/carnetrempli/carnetrempli.component.html
@@ -19,7 +19,7 @@
         <StackLayout>
             <GridLayout columns="auto, *">
                 <ContentView col="0" id="myView" width="300px" height="300px" ></ContentView>
-                <Label col="1" text="Pierre THOMAIN" class="nomPrenom_carnet"></Label>
+                <Label col="1" text="Guillaume THOMAIN" class="nomPrenom_carnet"></Label>
                 <Label col="1" text="39 ans" class="age_carnet"></Label>
             </GridLayout>
             <GridLayout columns="auto, *">
