--- a/src/app/informations/pistes/pistes.component.html
+++ b/src/app/informations/pistes/pistes.component.html
@@ -5,7 +5,7 @@
         fontWeight="Bold" textAlign="center"></Label>
         <StackLayout class="hr"row="1" colspan="2"></StackLayout>
     
-        <Label backgroundColor="#247DE4"color="white" class="page__content-placeholder" text="70% du domaine" row="2" column="0" rowspan="4"
+        <Label backgroundColor="#247DE4"color="white" class="page__content-placeholder" text="70% du domaine ouvert" textWrap="true" row="2" column="0" rowspan="4"
         fontWeight="Bold" width="500px" height="500px" id="domaine"></Label>
         <Label backgroundColor="#087A06"color="white" class="page__content-placeholder" text="3/6" row="2" column="1" 
         fontWeight="Bold" paddingLeft="100px" paddingRight="100px" marginRight="40px"></Label>
