--- a/src/app/informations/informations/informations.component.html
+++ b/src/app/informations/informations/informations.component.html
@@ -17,16 +17,16 @@
     <BottomNavigation height="400px">
         <TabStrip marginLeft="5%" marginRight="5%">
             <TabStripItem>
-                <Label class="encadre" fontWeight="Bold"color="black"text="Météo"></Label>
+                <Label class="encadre" fontWeight="Bold"color="black"text="METEO"></Label>
             </TabStripItem>
             <TabStripItem>
-                <Label class="encadre" fontWeight="Bold" color="black"text="Neige"></Label>
+                <Label class="encadre" fontWeight="Bold" color="black"text="NEIGES"></Label>
             </TabStripItem>
             <TabStripItem>
-                <Label class="encadre" fontWeight="Bold" color="black"text="Pistes"></Label>
+                <Label class="encadre" fontWeight="Bold" color="black"text="PISTES"></Label>
             </TabStripItem>
             <TabStripItem>
-                <Label class="encadre" fontWeight="Bold" color="black" text="Remontées"></Label>
+                <Label class="encadre" fontWeight="Bold" color="black" text="REMONTEES"></Label>
             </TabStripItem>
         </TabStrip>
         <TabContentItem>
