--- a/src/app/utilisateur/station/station.component.html
+++ b/src/app/utilisateur/station/station.component.html
@@ -9,11 +9,11 @@
         </GridLayout>
         <GridLayout rows="850">
             <ContentView row="0" id="cache_noir" width="100%" height="65%" backgroundColor="#000000"></ContentView>
-            <ContentView row="1" id="message_accueil" width="70%" height="37%" backgroundColor="#433B3B"></ContentView>
-            <Label row="2" class="entete2" text="Bienvenue à"></Label>
+            <ContentView row="1" id="message_accueil" width="70%" height="40%" backgroundColor="#433B3B"></ContentView>
+            <!-- <Label row="2" class="entete2" text="Bienvenue à"></Label> -->
         </GridLayout>
         <GridLayout>
-            <image src="https://www.flocon-vert.org/wp-content/uploads/2017/09/Capture-d%E2%80%99%C3%A9cran-2017-09-27-%C3%A0-10.00.41-291x300.png" width="40%" height="40%" class="logo_station"></image>
+            <image src="https://www.flocon-vert.org/wp-content/uploads/2017/09/Capture-d%E2%80%99%C3%A9cran-2017-09-27-%C3%A0-10.00.41-291x300.png" width="55%" height="55%" class="logo_station"></image>
         </GridLayout>
     </GridLayout>
 </StackLayout>
