--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,9 +18,57 @@ https://docs.nativescript.org/angular/ui/professional-ui-components/ng-SideDrawe
                     <Label col="1" text="Accueil" class="p-r-10"></Label>
                 </GridLayout> -->
 
+                <GridLayout columns="auto, *" class="nt-drawer__list-item" (tap)="onNavItemTap('/utilisateur')">
+                    <Label col="0" text="&#xf05a;" class="nt-icon fas"></Label>
+                    <Label col="1" text="Accueil" class="p-r-10"></Label>
+                </GridLayout>
+
                 <StackLayout class="hr"></StackLayout>
 
                 <GridLayout columns="auto, *" class="nt-drawer__list-item" (tap)="onNavItemTap('/informations')">
+                    <Label col="0" text="&#xf05a;" class="nt-icon fas"></Label>
+                    <Label col="1" text="Informations" class="p-r-10"></Label>
+                </GridLayout>
+
+                <StackLayout class="hr"></StackLayout>
+
+                <GridLayout columns="auto, *" class="nt-drawer__list-item" (tap)="onNavItemTap('/danger')">
+                    <Label col="0" text="&#xf05a;" class="nt-icon fas"></Label>
+                    <Label col="1" text="Signaler un danger" class="p-r-10"></Label>
+                </GridLayout>
+
+                <StackLayout class="hr"></StackLayout>
+
+                <GridLayout columns="auto, *" class="nt-drawer__list-item" (tap)="onNavItemTap('/sos')">
+                    <Label col="0" text="&#xf05a;" class="nt-icon fas"></Label>
+                    <Label col="1" text="Appeler les secours" class="p-r-10"></Label>
+                </GridLayout>
+
+                <StackLayout class="hr"></StackLayout>
+
+                <GridLayout columns="auto, *" class="nt-drawer__list-item" (tap)="onNavItemTap('/')">
+                    <Label col="0" text="&#xf05a;" class="nt-icon fas"></Label>
+                    <Label col="1" text="Mes signalements (pb)" class="p-r-10"></Label>
+                </GridLayout>
+
+                <StackLayout class="hr"></StackLayout>
+
+                <GridLayout columns="auto, *" class="nt-drawer__list-item" (tap)="onNavItemTap('/carnet')">
+                    <Label col="0" text="&#xf05a;" class="nt-icon fas"></Label>
+                    <Label col="1" text="Carnet de santé" class="p-r-10"></Label>
+                </GridLayout>
+
+                <StackLayout class="hr"></StackLayout>
+
+
+
+
+
+
+
+
+
+                <!-- <GridLayout columns="auto, *" class="nt-drawer__list-item" (tap)="onNavItemTap('/informations')">
                     <Label col="0" text="&#xf05a;" class="nt-icon fas"></Label>
                     <Label col="1" text="Informations" class="p-r-10"></Label>
                 </GridLayout>
@@ -48,6 +96,13 @@ https://docs.nativescript.org/angular/ui/professional-ui-components/ng-SideDrawe
                 </GridLayout>
 
                 <StackLayout class="hr"></StackLayout>
+
+                <GridLayout columns="auto, *" class="nt-drawer__list-item" (tap)="onNavItemTap('/carnet')">
+                    <Label col="0" text="&#xf573;" class="nt-icon fas"></Label>
+                    <Label col="1" text="Mes signalements" class="p-r-10"></Label>
+                </GridLayout>
+
+                <StackLayout class="hr"></StackLayout> -->
 
                 <Button text="DECONNEXION" class="btn btn-warning"></Button> 
 
