--- a/src/app/danger/accueil-danger/accueil-danger.component.html
+++ b/src/app/danger/accueil-danger/accueil-danger.component.html
@@ -1,4 +1,4 @@
-<ActionBar class="actionBarSos">
+<ActionBar class="actionBarDanger">
     <!-- 
     Use the NavigationButton as a side-drawer button in Android
     because ActionItems are shown on the right side of the ActionBar
@@ -12,6 +12,6 @@
     <ActionItem icon="res://menu" android:visibility="collapsed" (tap)="onDrawerButtonTap()"
         ios.position="left">
     </ActionItem>
-    <Label class="greyPage" text="SOS : POSTE DE SECOURS"></Label>
+    <Label class="greyPage" text="SIGNALER UN DANGER"></Label>
 </ActionBar>
 <page-router-outlet></page-router-outlet>
