--- a/src/app/danger/photo/photo.component.html
+++ b/src/app/danger/photo/photo.component.html
@@ -1,20 +1,3 @@
-<ActionBar class="actionBarCarnet">
-    <!-- 
-    Use the NavigationButton as a side-drawer button in Android
-    because ActionItems are shown on the right side of the ActionBar
-    -->
-    <NavigationButton ios:visibility="collapsed" icon="res://menu" (tap)="onDrawerButtonTap()"></NavigationButton>
-    <!-- 
-    Use the ActionItem for IOS with position set to left. Using the
-    NavigationButton as a side-drawer button in iOS is not possible,
-    because its function is to always navigate back in the application.
-    -->
-    <ActionItem icon="res://menu" android:visibility="collapsed" (tap)="onDrawerButtonTap()"
-        ios.position="left" >
-    </ActionItem>
-    <Label class="blackPage" text="MEDIA"></Label>
-</ActionBar>
-
 <GridLayout rows="100, 460">
     <ContentView row="0" width="2000px" backgroundColor="#000000" class="bandeau_photo"></ContentView>
     <ContentView row="1" width="800px" backgroundColor="#C4C4C4" class="photo_danger"></ContentView>
@@ -34,7 +17,7 @@
                 <Label text="&#xf053;" class="nt-icon fas" id="slider"></Label>
             </TabStripItem>
             <TabStripItem>
-                <Label text="PRECEDENT" id="slider"></Label>
+                <Label text="PRECEDENT" id="slider" (tap)="goBack()"></Label>
             </TabStripItem>
             <TabStripItem>
                 <Label text="SUIVANT" id="slider"></Label>
